fix foooter position on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -240,9 +240,23 @@ footer {
 }
 
 .footer-fixed {
-  position: fixed;
+  /*position: fixed;*/
   bottom: 0;
   width: 100%;
+  padding: 0 0;
+}
+@media only screen and (min-width: 768px) {
+  .footer-fixed {
+    position: fixed;
+  }
+}
+
+.footer-fixed p {
+  margin: 0;
+}
+
+.footer-fixed .theme-by  {
+  margin: 0;
 }
 
 footer a {
